--- a/Web-App/styles.css
+++ b/Web-App/styles.css
@@ -74,7 +74,55 @@ img {
 }
 
 #plantName {
-    color: #28a745;
+    color: #000000;
     font-weight: bold;
     font-size: 18px;
+}
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    opacity: 0; /* Start invisible */
+    transition: opacity 0.5s ease; /* Fade effect */
+}
+
+.modal.show {
+    display: block; /* Show the modal */
+    opacity: 1; /* Fully visible */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    transform: translateY(-50px); /* Start slightly above */
+    transition: transform 0.5s ease; /* Animate content appearance */
+}
+
+.modal.show .modal-content {
+    transform: translateY(0); /* Move to final position */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
